kube/task-7/web-analisys.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-analysis
  labels:
    app: analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-analysis
  template:
    metadata:
      labels:
        app: service-analysis
        tier: web
        tag: "v1"
    spec:
      containers:
        - name: service-analysis
          imagePullPolicy: Always
          image: "arukim/dnatrack-service-analysis:v1"
          ports:
          - name: http
            containerPort: 80
            protocol: TCP
          volumeMounts:
          - name: app-config
            mountPath: /etc/config
      volumes:
        - name: app-config
          configMap:
            name: app
