kube/task-7/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /s-43/admin
spec:
  rules:
  - host: hel.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /s-43/admin
        backend:
          serviceName: web-admin
          servicePort: 80
